added prettier and applies pretties styles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,10 +25,7 @@
       "@shared/*": ["src/app/shared/*"],
       "@features/*": ["src/app/features/*"]
     },
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
