--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jest": "^29.5.13",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.2.4",
+    "prettier": "3.3.3",
     "typescript": "~5.4.5"
   }
 }
